Temp Activity hold for Party Function

--- a/DotaMatch/app/src/main/AndroidManifest.xml
+++ b/DotaMatch/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".ProfileActivity" />
         <activity android:name=".PreferenceActivity" />
         <activity android:name=".ChatRoomActivity" />
-        <activity android:name=".MessageActivity"></activity>
+        <activity android:name=".MessageActivity" />
+        <activity android:name=".PartyActivity"></activity>
     </application>
 
 </manifest>
