--- a/DotaMatch/app/src/main/AndroidManifest.xml
+++ b/DotaMatch/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".RegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,8 @@
         <activity android:name=".PreferenceActivity" />
         <activity android:name=".ChatRoomActivity" />
         <activity android:name=".MessageActivity" />
-        <activity android:name=".PartyActivity"></activity>
+        <activity android:name=".PartyActivity" />
+        <activity android:name=".SetupActivity"></activity>
     </application>
 
 </manifest>
